[project]
name = "pyMoCo"
version = "0.0.0"
license = "BSD-3-Clause"
description = "Python wrapper for motion controller drivers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyusb"]

[project.urls]
homepage = 'https://code.google.com/p/pymoco/'

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
extend-select = ["B", "D", "I", "ANN", "NPY", "RET", "SIM", "UP"]
extend-ignore = ["ANN401", "B009", "B019", "D1", "D203", "D211", "D212", "EM1", "N8", "PLR", "TRY003"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
